...
    
    //MARK: Initializers
    override func viewDidLoad() {
        super.viewDidLoad()
        
        view.backgroundColor = .white
        title = "Devices"
        navigationController?.navigationBar.prefersLargeTitles = false
        setupView()
        setupNavigationBar()
        bindViewmodel()
        
        fetchDevices()
...
    
    fileprivate func setupView(){
        
        //MARK: SearchBar Setup
        searchBar.delegate = self
        searchBar.translatesAutoresizingMaskIntoConstraints = false
        searchBar.placeholder = "Search here..."
        view.addSubview(searchBar)
        searchBar.topAnchor.constraint(equalTo: view.safeAreaLayoutGuide.topAnchor).isActive = true
        searchBar.leadingAnchor.constraint(equalTo: view.leadingAnchor).isActive = true
        searchBar.trailingAnchor.constraint(equalTo: view.trailingAnchor).isActive = true
        searchBarHeightConstraint = searchBar.heightAnchor.constraint(equalToConstant: 0)
        searchBarHeightConstraint.isActive = true
...
