...
}




enum SideMenu: String {
    case home =  "Home"
    case device = "Device"
    case setting = "Settings"
    
    func title() -> String {
        return self.rawValue
    }
...
